--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="./img/logoSimbolo.png">
+  <meta name="description"
+    content="Libreria EntreLineas... Encontrá el libro que estás buscando. Novelas, cuentos infantiles, historia, economía, politica, ciencia ficcion, jardinería y mucho más. Te llevamos tus libros favoritos. Lunes a viernes de 8:30 a 20:30 y sábados de 9 a 14. O visítanos en Av. Santa Fe 1860, C1123 CABA.">
+  <meta name="keywords"
+    content="libros libreria leer lectura biblioteca comprar book novelas cuentos literatura historia economia escritores politica">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -34,10 +38,13 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="./pages/elPoderDelAlterEgo.html">El Poder del Alter Ego</a></li>
                   <li><a class="dropdown-item" href="./pages/elPrincipito.html">El Principito</a></li>
-                  <li><a class="dropdown-item" href="./pages/elMetodoDeLosHermanosWright.html">El Metodo de los Hermanos Wright</a></li>
-                  <li><a class="dropdown-item" href="./pages/elHombreMasRicoDeBabilonia.html">El hombre mas rico de Babilonia</a></li>
-                  <li><a class="dropdown-item" href="./pages/seisSombrerosParaPensar.html">6 sombreros para pensar</a></li>
-              </ul>
+                  <li><a class="dropdown-item" href="./pages/elMetodoDeLosHermanosWright.html">El Metodo de los Hermanos
+                      Wright</a></li>
+                  <li><a class="dropdown-item" href="./pages/elHombreMasRicoDeBabilonia.html">El hombre mas rico de
+                      Babilonia</a></li>
+                  <li><a class="dropdown-item" href="./pages/seisSombrerosParaPensar.html">6 sombreros para pensar</a>
+                  </li>
+                </ul>
               </li>
               <li class="nav-item"><a class="nav-link" href="#">BestSeller 2022</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Próximamente</a></li>
@@ -63,7 +70,9 @@
               <div class="card-body">
                 <h5 class="card-title">El poder de tu alter ego</h5>
                 <p class="card-text">Autor: Todd Herman</p>
-                <p class="btn-ecommerce"><a href="./pages/elPoderDelAlterEgo.html" class="btn-ecommerce">Más Información!</a></p>
+                <div class="box-information">
+                  <p><a href="./pages/elPoderDelAlterEgo.html" class="btn-ecommerce">Más Información!</a></p>
+                </div>
               </div>
             </div>
           </div>
@@ -74,7 +83,9 @@
               <div class="card-body">
                 <h5 class="card-title">El principito</h5>
                 <p class="card-text">Autor: Antoine de Saint-Exupéry</p>
-                <p class="btn-ecommerce"><a href="./pages/elPrincipito.html" class="btn-ecommerce">Más Información!</a></p>
+                <div class="box-information">
+                  <p><a href="./pages/elPrincipito.html" class="btn-ecommerce">Más Información!</a></p>
+                </div>
               </div>
             </div>
           </div>
@@ -86,7 +97,9 @@
               <div class="card-body">
                 <h5 class="card-title">El metodo de los hermanos Wright</h5>
                 <p class="card-text">Autor: Mark Eppler</p>
-                <p class="btn-ecommerce"><a href="./pages/elMetodoDeLosHermanosWright.html" class="btn-ecommerce">Más Información!</a></p>
+                <div class="box-information">
+                  <p><a href="./pages/elMetodoDeLosHermanosWright.html" class="btn-ecommerce">Más Información!</a></p>
+                </div>
               </div>
             </div>
           </div>
@@ -98,7 +111,9 @@
               <div class="card-body">
                 <h5 class="card-title">El hombre mas rico de babilonia</h5>
                 <p class="card-text">Autor: George S. Clason</p>
-                <p class="btn-ecommerce"><a href="./pages/elHombreMasRicoDeBabilonia.html" class="btn-ecommerce">Más Información!</a></p>
+                <div class="box-information">
+                  <p><a href="./pages/elHombreMasRicoDeBabilonia.html" class="btn-ecommerce">Más Información!</a></p>
+                </div>
               </div>
             </div>
           </div>
@@ -110,7 +125,9 @@
               <div class="card-body">
                 <h5 class="card-title">Seis sombreros para pensar</h5>
                 <p class="card-text">Autor: Edward De-Bono</p>
-                <p class="btn-ecommerce"><a href="./pages/seisSombrerosParaPensar.html" class="btn-ecommerce">Más Información!</a></p>
+                <div class="box-information">
+                  <p><a href="./pages/seisSombrerosParaPensar.html" class="btn-ecommerce">Más Información!</a></p>
+                </div>
               </div>
             </div>
           </div>
@@ -125,7 +142,9 @@
               <div class="card-body">
                 <h5 class="card-title">El problema de los tres cuerpos</h5>
                 <p class="card-text">Autor: Cixin Liu</p>
-                <p class="btn-ecommerce"><a href="" class="btn-ecommerce">Más Información!</a></p>
+                <div class="box-information">
+                  <p><a href="" class="btn-ecommerce">Más Información!</a></p>
+                </div>
               </div>
             </div>
           </div>
@@ -136,7 +155,9 @@
               <div class="card-body">
                 <h5 class="card-title">Fahrenheit 451</h5>
                 <p class="card-text">Autor: Ray Bradbury</p>
-                <p class="btn-ecommerce"><a href="" class="btn-ecommerce">Más Información!</a></p>
+                <div class="box-information">
+                  <p><a href="" class="btn-ecommerce">Más Información!</a></p>
+                </div>
               </div>
             </div>
           </div>
@@ -147,7 +168,9 @@
               <div class="card-body">
                 <h5 class="card-title">Proyecto Hail Mary</h5>
                 <p class="card-text">Autor: Andy Weir</p>
-                <p class="btn-ecommerce"><a href="" class="btn-ecommerce">Más Información!</a></p>
+                <div class="box-information">
+                  <p><a href="" class="btn-ecommerce">Más Información!</a></p>
+                </div>
               </div>
             </div>
           </div>
@@ -158,7 +181,9 @@
               <div class="card-body">
                 <h5 class="card-title">Neuromante</h5>
                 <p class="card-text">Autor: William Gibson</p>
-                <p class="btn-ecommerce"><a href="" class="btn-ecommerce">Más Información!</a></p>
+                <div class="box-information">
+                  <p><a href="" class="btn-ecommerce">Más Información!</a></p>
+                </div>
               </div>
             </div>
           </div>
@@ -169,7 +194,9 @@
               <div class="card-body">
                 <h5 class="card-title">Yo, Robot</h5>
                 <p class="card-text">Autor: Isaac Asimov</p>
-                <p class="btn-ecommerce"><a href="" class="btn-ecommerce">Más Información!</a></p>
+                <div class="box-information">
+                  <p><a href="" class="btn-ecommerce">Más Información!</a></p>
+                </div>
               </div>
             </div>
           </div>
@@ -184,7 +211,9 @@
               <div class="card-body">
                 <h5 class="card-title">Discursos que inspiraron la historia</h5>
                 <p class="card-text">Autor: Jacob F. Field</p>
-                <p class="btn-ecommerce"><a href="" class="btn-ecommerce">Más Información!</a></p>
+                <div class="box-information">
+                  <p><a href="" class="btn-ecommerce">Más Información!</a></p>
+                </div>
               </div>
             </div>
           </div>
@@ -196,7 +225,9 @@
               <div class="card-body">
                 <h5 class="card-title">20 grandes consp. de la historia</h5>
                 <p class="card-text">Autor: Santiago Camac</p>
-                <p class="btn-ecommerce"><a href="" class="btn-ecommerce">Más Información!</a></p>
+                <div class="box-information">
+                  <p><a href="" class="btn-ecommerce">Más Información!</a></p>
+                </div>
               </div>
             </div>
           </div>
@@ -208,7 +239,9 @@
               <div class="card-body">
                 <h5 class="card-title">El mas hombre mas inteligente de la historia</h5>
                 <p class="card-text">Autor: Augusto Cury</p>
-                <p class="btn-ecommerce"><a href="" class="btn-ecommerce">Más Información!</a></p>
+                <div class="box-information">
+                  <p><a href="" class="btn-ecommerce">Más Información!</a></p>
+                </div>
               </div>
             </div>
           </div>
@@ -219,7 +252,9 @@
               <div class="card-body">
                 <h5 class="card-title">La gran historia de todo</h5>
                 <p class="card-text">Autor: David Christian</p>
-                <p class="btn-ecommerce"><a href="" class="btn-ecommerce">Más Información!</a></p>
+                <div class="box-information">
+                  <p><a href="" class="btn-ecommerce">Más Información!</a></p>
+                </div>
               </div>
             </div>
           </div>
@@ -231,7 +266,9 @@
               <div class="card-body">
                 <h5 class="card-title">Una breve historia de casi todo</h5>
                 <p class="card-text">Autor: Bill Bryson</p>
-                <p class="btn-ecommerce"><a href="" class="btn-ecommerce">Más Información!</a></p>
+                <div class="box-information">
+                  <p><a href="" class="btn-ecommerce">Más Información!</a></p>
+                </div>
               </div>
             </div>
           </div>
@@ -254,24 +291,24 @@
           </div>
           <div class="col">
             <h6 class="title__footer">Contáctanos</h5>
-            <p class="fz-6">TELEFONO: 011 4813-6052</p>
-            <p class="fz-6">EMAIL: info@libreriaentrelineas.com</p>
-            <p class="fz-6">DIRECCION: Av. Santa Fe 1860, C1123 CABA </p>
+              <p class="fz-6">TELEFONO: 011 4813-6052</p>
+              <p class="fz-6">EMAIL: info@libreriaentrelineas.com</p>
+              <p class="fz-6">DIRECCION: Av. Santa Fe 1860, C1123 CABA </p>
           </div>
           <div class="col">
             <h6 class="title__footer">Síguenos</h5>
-            <div class="redes__sociales">
-              <a href="https://www.facebook.com/" target="_blank"><img src="./img/facebookLogo.webp" alt="FACEBOOK"
-                  title="FACEBOOK" class="redesSociales__img"></a>
-              <a href="https://www.instagram.com/" target="_blank"><img src="./img/instagramLogo.png" alt="INSTAGRAM"
-                  title="INSTAGRAM" class="redesSociales__img"></a>
-              <a href="https://www.tiktok.com/" target="_blank"><img src="./img/tiktokLogo.png" alt="TIKTOK"
-                  title="TIKTOK" class="redesSociales__img"></a>
-              <a href="https://twitter.com/" target="_blank"><img src="./img/twitterLogo.png" alt="TWITTER"
-                  title="TWITTER" class="redesSociales__img"></a>
-              <a href="https://www.youtube.com/" target="_blank"><img src="./img/youtubeLogo.png" alt="YOUTUBE"
-                  title="YOUTUBE" class="redesSociales__img"></a>
-            </div>
+              <div class="redes__sociales">
+                <a href="https://www.facebook.com/" target="_blank"><img src="./img/facebookLogo.webp" alt="FACEBOOK"
+                    title="FACEBOOK" class="redesSociales__img"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="./img/instagramLogo.png" alt="INSTAGRAM"
+                    title="INSTAGRAM" class="redesSociales__img"></a>
+                <a href="https://www.tiktok.com/" target="_blank"><img src="./img/tiktokLogo.png" alt="TIKTOK"
+                    title="TIKTOK" class="redesSociales__img"></a>
+                <a href="https://twitter.com/" target="_blank"><img src="./img/twitterLogo.png" alt="TWITTER"
+                    title="TWITTER" class="redesSociales__img"></a>
+                <a href="https://www.youtube.com/" target="_blank"><img src="./img/youtubeLogo.png" alt="YOUTUBE"
+                    title="YOUTUBE" class="redesSociales__img"></a>
+              </div>
           </div>
           <div class="col">
             <p class="title__footer fz-6">COPYRIGHT LIBRERIA ENTRELINEAS</p>
