--- a/pages/elHombreMasRicoDeBabilonia.html
+++ b/pages/elHombreMasRicoDeBabilonia.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="../img/logoSimbolo.png">
+    <meta name="description" content="Libreria EntreLineas... Encontrá el libro que estás buscando. Novelas, cuentos infantiles, historia, economía, politica, ciencia ficcion, jardinería y mucho más. Te llevamos tus libros favoritos. Lunes a viernes de 8:30 a 20:30 y sábados de 9 a 14. O visítanos en Av. Santa Fe 1860, C1123 CABA.">
+  <meta name="keywords" content="libros libreria leer lectura biblioteca comprar book novelas cuentos literatura historia economia escritores politica">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -66,8 +68,8 @@
                         <div class=" col">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/cOfDb2ZqGf8" title="YouTube video player" frameborder="0"           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video__book"></iframe>
                         </div>
-                        <div class="col">
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque maxime, autem pariatur ab obcaecati repudiandae! Fuga asperiores, ut doloribus amet sint adipisci voluptas at, dolore aperiam hic explicabo, eligendi ipsum? </p>
+                        <div class="col text-description">
+                            <p>Ante ti se extiende tu futuro como un camino que se adentra en la distancia. A lo largo de ese camino hay ambiciones que deseas cumplir... deseos que deseas gratificar. Para hacer realidad sus ambiciones y deseos, debe tener éxito con el dinero. Utilice los principios financieros que se exponen en las páginas siguientes. Deja que te guíen desde las restricciones de una cartera escasa hasta la vida más plena y feliz que permite una cartera llena. Como la ley de la gravedad, son universales e inmutables. Que sean para ti, como lo han sido para tantos otros, una clave segura para tener un bolso gordo, mayores saldos bancarios y un progreso financiero gratificante. </p>
                         </div>
                     </div>
                 </div>
@@ -97,7 +99,7 @@
                         <div class="col text-center">
                             <h5 class="ecommerce">No pierdas tiempo! Tenes que leerlo YA!</h5>
                             <h4 class="item__compra ecommerce">ARS$1.703,85</h4>
-                            <p class="btn__ecommerce"><a href="#" class="btn__ecommerce">Comprar!</a></p>
+                            <p class="buy"><a href="#" class="buy">Comprar!</a></p>
                         </div>
                     </div>
                 </div>
