--- a/pages/elPrincipito.html
+++ b/pages/elPrincipito.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="../img/logoSimbolo.png">
+    <meta name="description" content="Libreria EntreLineas... Encontrá el libro que estás buscando. Novelas, cuentos infantiles, historia, economía, politica, ciencia ficcion, jardinería y mucho más. Te llevamos tus libros favoritos. Lunes a viernes de 8:30 a 20:30 y sábados de 9 a 14. O visítanos en Av. Santa Fe 1860, C1123 CABA.">
+  <meta name="keywords" content="libros libreria leer lectura biblioteca comprar book novelas cuentos literatura historia economia escritores politica">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -70,7 +72,7 @@
                         <div class=" col">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/a75ZRRgYlEY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video__book"></iframe>
                         </div>
-                        <div class="col">
+                        <div class="col text-description">
                             <p>El clásico de la literatura, no solo infantil, narra la historia del Principito, el cual
                                 a través de un lenguaje aparentemente sencillo y de vivencias propias, deja enseñanzas
                                 de vida que ayudarán a la comprensión y valoración, tanto de las cosas sencillas como de
@@ -104,7 +106,7 @@
                         <div class="col text-center">
                             <h5 class="ecommerce">No pierdas tiempo! Tenes que leerlo YA!</h5>
                             <h4 class="item__compra ecommerce">ARS$1.599,52</h4>
-                            <p class="btn__ecommerce"><a href="#" class="btn__ecommerce">Comprar!</a></p>
+                            <p class="buy"><a href="#" class="buy">Comprar!</a></p>
                         </div>
                     </div>
                 </div>
