--- a/pages/seisSombrerosParaPensar.html
+++ b/pages/seisSombrerosParaPensar.html
@@ -6,6 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="../img/logoSimbolo.png">
+    <meta name="description"
+        content="Libreria EntreLineas... Encontrá el libro que estás buscando. Novelas, cuentos infantiles, historia, economía, politica, ciencia ficcion, jardinería y mucho más. Te llevamos tus libros favoritos. Lunes a viernes de 8:30 a 20:30 y sábados de 9 a 14. O visítanos en Av. Santa Fe 1860, C1123 CABA.">
+    <meta name="keywords"
+        content="libros libreria leer lectura biblioteca comprar book novelas cuentos literatura historia economia escritores politica">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -74,7 +78,7 @@
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen class="video__book"></iframe>
                         </div>
-                        <div class="col">
+                        <div class="col text-description">
                             <p>Seis sombreros para pensar es una guía para pensar mejor utilizada por millones de
                                 personas en todo el mundo. Un método que potencia al máximo la inteligencia, la
                                 experiencia y la información. El método se basa en la interpretación de los cambios que
@@ -111,7 +115,7 @@
                         <div class="col text-center">
                             <h5 class="ecommerce">No pierdas tiempo! Tenes que leerlo YA!</h5>
                             <h4 class="item__compra ecommerce">ARS$2.971,47</h4>
-                            <p class="btn__ecommerce"><a href="#" class="btn__ecommerce">Comprar!</a></p>
+                            <p class="buy"><a href="#" class="buy">Comprar!</a></p>
                         </div>
                     </div>
                 </div>
