--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/style.css">
+  
   <title>EntreLíneas</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
   <div class="container-fluid">
+    <!-- creacion del header -->
     <header class="navbar-bg navbar-line">
       <nav class="navbar navbar-expand-lg navbar-light navbar-bg">
         <div class="container-fluid navbar-bg">
@@ -52,13 +54,14 @@
               <li class="nav-item"><a class="nav-link" href="#">Iniciar Sesion</a></li>
             </ul>
             <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Buscar</button>
+              <input class="form-control me-2" type="search" placeholder="Buscar libro o autor" aria-label="Search">
+              <button class="btn" type="submit">Buscar</button>
             </form>
           </div>
         </div>
       </nav>
     </header>
+    <!-- cuerpo principal de mi pagina -->
     <article>
       <div>
         <h2 class="title-seccion">Más vendidos en ARGENTINA</h2>
@@ -275,9 +278,10 @@
         </div>
       </div>
     </article>
+    <!-- creacion footer -->
     <footer>
       <div class="container-fluid">
-        <div class="row">
+        <div class="row footer">
           <div class="col">
             <h6 class="title__footer">Medios de Pago</h6>
             <div class="medios__pago">
