--- a/pages/elHombreMasRicoDeBabilonia.html
+++ b/pages/elHombreMasRicoDeBabilonia.html
@@ -6,17 +6,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="../img/logoSimbolo.png">
-    <meta name="description" content="Libreria EntreLineas... Encontrá el libro que estás buscando. Novelas, cuentos infantiles, historia, economía, politica, ciencia ficcion, jardinería y mucho más. Te llevamos tus libros favoritos. Lunes a viernes de 8:30 a 20:30 y sábados de 9 a 14. O visítanos en Av. Santa Fe 1860, C1123 CABA.">
-  <meta name="keywords" content="libros libreria leer lectura biblioteca comprar book novelas cuentos literatura historia economia escritores politica">
+    <meta name="description"
+        content="El hombre mas rico de Babilonia es un libro clasico de la seccion de FINANZAS.>
+    <meta name="keywords"
+        content="libro economia finanzas independencia George S. Clason">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    
+    <title>EntreLíneas | El hombre mas rico de Babilonia</title>
     <link rel="stylesheet" href="../css/style.css">
-    <title>EntreLíneas</title>
 </head>
 
 <body>
     <div class="container-fluid">
+        <!-- creacion del header -->
         <header class="navbar-bg navbar-line">
             <nav class="navbar navbar-expand-lg navbar-light navbar-bg">
                 <div class="container-fluid navbar-bg">
@@ -34,11 +38,16 @@
                                     Categorías
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="../pages/elPoderDelAlterEgo.html">El Poder del Alter Ego</a></li>
-                                    <li><a class="dropdown-item" href="../pages/elPrincipito.html">El Principito</a></li>
-                                    <li><a class="dropdown-item" href="../pages/elMetodoDeLosHermanosWright.html">El Metodo de los Hermanos Wright</a></li>
-                                    <li><a class="dropdown-item" href="../pages/elHombreMasRicoDeBabilonia.html">El hombre mas rico de Babilonia</a></li>
-                                    <li><a class="dropdown-item" href="../pages/seisSombrerosParaPensar.html">6 sombreros para pensar</a></li>
+                                    <li><a class="dropdown-item" href="../pages/elPoderDelAlterEgo.html">El Poder del
+                                            Alter Ego</a></li>
+                                    <li><a class="dropdown-item" href="../pages/elPrincipito.html">El Principito</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="../pages/elMetodoDeLosHermanosWright.html">El
+                                            Metodo de los Hermanos Wright</a></li>
+                                    <li><a class="dropdown-item" href="../pages/elHombreMasRicoDeBabilonia.html">El
+                                            hombre mas rico de Babilonia</a></li>
+                                    <li><a class="dropdown-item" href="../pages/seisSombrerosParaPensar.html">6
+                                            sombreros para pensar</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item"><a class="nav-link" href="#">BestSeller 2022</a></li>
@@ -48,12 +57,13 @@
                         </ul>
                         <form class="d-flex">
                             <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Buscar</button>
+                            <button class="btn" type="submit">Buscar</button>
                         </form>
                     </div>
                 </div>
             </nav>
         </header>
+        <!-- cuerpo principal de mi pagina -->
         <article>
             <div>
                 <div class="title-book-section">
@@ -66,10 +76,20 @@
                                 alt="el hombre ams rico de babilonia">
                         </div>
                         <div class=" col">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/cOfDb2ZqGf8" title="YouTube video player" frameborder="0"           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video__book"></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/cOfDb2ZqGf8"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen class="video__book"></iframe>
                         </div>
                         <div class="col text-description">
-                            <p>Ante ti se extiende tu futuro como un camino que se adentra en la distancia. A lo largo de ese camino hay ambiciones que deseas cumplir... deseos que deseas gratificar. Para hacer realidad sus ambiciones y deseos, debe tener éxito con el dinero. Utilice los principios financieros que se exponen en las páginas siguientes. Deja que te guíen desde las restricciones de una cartera escasa hasta la vida más plena y feliz que permite una cartera llena. Como la ley de la gravedad, son universales e inmutables. Que sean para ti, como lo han sido para tantos otros, una clave segura para tener un bolso gordo, mayores saldos bancarios y un progreso financiero gratificante. </p>
+                            <p>Ante ti se extiende tu futuro como un camino que se adentra en la distancia. A lo largo
+                                de ese camino hay ambiciones que deseas cumplir... deseos que deseas gratificar. Para
+                                hacer realidad sus ambiciones y deseos, debe tener éxito con el dinero. Utilice los
+                                principios financieros que se exponen en las páginas siguientes. Deja que te guíen desde
+                                las restricciones de una cartera escasa hasta la vida más plena y feliz que permite una
+                                cartera llena. Como la ley de la gravedad, son universales e inmutables. Que sean para
+                                ti, como lo han sido para tantos otros, una clave segura para tener un bolso gordo,
+                                mayores saldos bancarios y un progreso financiero gratificante. </p>
                         </div>
                     </div>
                 </div>
@@ -105,6 +125,7 @@
                 </div>
             </div>
         </article>
+        <!-- creacion footer -->
         <footer>
             <div class="container-fluid">
                 <div class="row">
@@ -122,24 +143,24 @@
                     </div>
                     <div class="col">
                         <h6 class="title__footer">Contáctanos</h5>
-                        <p class="fz-6">TELEFONO: 011 4813-6052</p>
-                        <p class="fz-6">EMAIL: info@libreriaentrelineas.com</p>
-                        <p class="fz-6">DIRECCION: Av. Santa Fe 1860, C1123 CABA </p>
+                            <p class="fz-6">TELEFONO: 011 4813-6052</p>
+                            <p class="fz-6">EMAIL: info@libreriaentrelineas.com</p>
+                            <p class="fz-6">DIRECCION: Av. Santa Fe 1860, C1123 CABA </p>
                     </div>
                     <div class="col">
                         <h6 class="title__footer">Síguenos</h5>
-                        <div class="redes__sociales">
-                            <a href="https://www.facebook.com/" target="_blank"><img src="../img/facebookLogo.webp"
-                                    alt="FACEBOOK" title="FACEBOOK" class="redesSociales__img"></a>
-                            <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagramLogo.png"
-                                    alt="INSTAGRAM" title="INSTAGRAM" class="redesSociales__img"></a>
-                            <a href="https://www.tiktok.com/" target="_blank"><img src="../img/tiktokLogo.png"
-                                    alt="TIKTOK" title="TIKTOK" class="redesSociales__img"></a>
-                            <a href="https://twitter.com/" target="_blank"><img src="../img/twitterLogo.png"
-                                    alt="TWITTER" title="TWITTER" class="redesSociales__img"></a>
-                            <a href="https://www.youtube.com/" target="_blank"><img src="../img/youtubeLogo.png"
-                                    alt="YOUTUBE" title="YOUTUBE" class="redesSociales__img"></a>
-                        </div>
+                            <div class="redes__sociales">
+                                <a href="https://www.facebook.com/" target="_blank"><img src="../img/facebookLogo.webp"
+                                        alt="FACEBOOK" title="FACEBOOK" class="redesSociales__img"></a>
+                                <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagramLogo.png"
+                                        alt="INSTAGRAM" title="INSTAGRAM" class="redesSociales__img"></a>
+                                <a href="https://www.tiktok.com/" target="_blank"><img src="../img/tiktokLogo.png"
+                                        alt="TIKTOK" title="TIKTOK" class="redesSociales__img"></a>
+                                <a href="https://twitter.com/" target="_blank"><img src="../img/twitterLogo.png"
+                                        alt="TWITTER" title="TWITTER" class="redesSociales__img"></a>
+                                <a href="https://www.youtube.com/" target="_blank"><img src="../img/youtubeLogo.png"
+                                        alt="YOUTUBE" title="YOUTUBE" class="redesSociales__img"></a>
+                            </div>
                     </div>
                     <div class="col">
                         <p class="title__footer fz-6">COPYRIGHT LIBRERIA ENTRELINEAS</p>
