--- a/pages/elPrincipito.html
+++ b/pages/elPrincipito.html
@@ -6,17 +6,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="../img/logoSimbolo.png">
-    <meta name="description" content="Libreria EntreLineas... Encontrá el libro que estás buscando. Novelas, cuentos infantiles, historia, economía, politica, ciencia ficcion, jardinería y mucho más. Te llevamos tus libros favoritos. Lunes a viernes de 8:30 a 20:30 y sábados de 9 a 14. O visítanos en Av. Santa Fe 1860, C1123 CABA.">
-  <meta name="keywords" content="libros libreria leer lectura biblioteca comprar book novelas cuentos literatura historia economia escritores politica">
+    <meta name="description"
+        content="El principito es el libro que la humanidad ha elegido para cuidar al niño interior">
+    <meta name="keywords"
+        content="libros sueños infancia">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    
+    <title>EntreLíneas | El principito</title>
     <link rel="stylesheet" href="../css/style.css">
-    <title>EntreLíneas</title>
 </head>
 
 <body>
     <div class="container-fluid">
+        <!-- creacion del header -->
         <header class="navbar-bg navbar-line">
             <nav class="navbar navbar-expand-lg navbar-light navbar-bg">
                 <div class="container-fluid navbar-bg">
@@ -53,12 +57,13 @@
                         </ul>
                         <form class="d-flex">
                             <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Buscar</button>
+                            <button class="btn" type="submit">Buscar</button>
                         </form>
                     </div>
                 </div>
             </nav>
         </header>
+        <!-- cuerpo principal de mi pagina -->
         <article>
             <div>
                 <div class="title-book-section">
@@ -70,7 +75,10 @@
                             <img src="../img/elPrincipito.jpg" class="rounded" alt="el principito">
                         </div>
                         <div class=" col">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/a75ZRRgYlEY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video__book"></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/a75ZRRgYlEY"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen class="video__book"></iframe>
                         </div>
                         <div class="col text-description">
                             <p>El clásico de la literatura, no solo infantil, narra la historia del Principito, el cual
@@ -112,6 +120,7 @@
                 </div>
             </div>
         </article>
+        <!-- creacion footer -->
         <footer>
             <div class="container-fluid">
                 <div class="row">
