--- a/pages/seisSombrerosParaPensar.html
+++ b/pages/seisSombrerosParaPensar.html
@@ -7,18 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="../img/logoSimbolo.png">
     <meta name="description"
-        content="Libreria EntreLineas... Encontrá el libro que estás buscando. Novelas, cuentos infantiles, historia, economía, politica, ciencia ficcion, jardinería y mucho más. Te llevamos tus libros favoritos. Lunes a viernes de 8:30 a 20:30 y sábados de 9 a 14. O visítanos en Av. Santa Fe 1860, C1123 CABA.">
+        content="La quimica, la biologia y la psicologia se han unido para crear esta obra maravillosa que te enseñara como despertarte y comenzr a pensar distinto">
     <meta name="keywords"
-        content="libros libreria leer lectura biblioteca comprar book novelas cuentos literatura historia economia escritores politica">
+        content="libro crecimiento psicolgoia quimica biologia sombreros pensamiento desarrollo">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    
+    <title>EntreLíneas | 6 sombreros para pensar</title>
     <link rel="stylesheet" href="../css/style.css">
-    <title>EntreLíneas</title>
 </head>
 
 <body>
     <div class="container-fluid">
+        <!-- creacion del header -->
         <header class="navbar-bg navbar-line">
             <nav class="navbar navbar-expand-lg navbar-light navbar-bg">
                 <div class="container-fluid navbar-bg">
@@ -55,12 +57,13 @@
                         </ul>
                         <form class="d-flex">
                             <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Buscar</button>
+                            <button class="btn" type="submit">Buscar</button>
                         </form>
                     </div>
                 </div>
             </nav>
         </header>
+        <!-- cuerpo principal de mi pagina -->
         <article>
             <div>
                 <div class="title-book-section">
@@ -121,6 +124,7 @@
                 </div>
             </div>
         </article>
+        <!-- creacion footer -->
         <footer>
             <div class="container-fluid">
                 <div class="row">
